// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/anchor/demo/basic.md correctly 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="alu-anchor-wrapper"
      style="max-height:100vh"
    >
      <div
        class="alu-anchor"
      >
        <div
          class="alu-anchor-ink"
        >
          <span
            class="alu-anchor-ink-ball"
          />
        </div>
        <div
          class="alu-anchor-link"
        >
          <a
            class="alu-anchor-link-title"
            href="#components-anchor-demo-basic"
            title="Basic demo"
          >
            Basic demo
          </a>
        </div>
        <div
          class="alu-anchor-link"
        >
          <a
            class="alu-anchor-link-title"
            href="#components-anchor-demo-fixed"
            title="Fixed demo"
          >
            Fixed demo
          </a>
        </div>
        <div
          class="alu-anchor-link"
        >
          <a
            class="alu-anchor-link-title"
            href="#API"
            title="API"
          >
            API
          </a>
          <div
            class="alu-anchor-link"
          >
            <a
              class="alu-anchor-link-title"
              href="#Anchor-Props"
              title="Anchor Props"
            >
              Anchor Props
            </a>
          </div>
          <div
            class="alu-anchor-link"
          >
            <a
              class="alu-anchor-link-title"
              href="#Link-Props"
              title="Link Props"
            >
              Link Props
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/anchor/demo/onClick.md correctly 1`] = `
<div
  class="alu-anchor-wrapper"
  style="max-height:100vh"
>
  <div
    class="alu-anchor fixed"
  >
    <div
      class="alu-anchor-ink"
    >
      <span
        class="alu-anchor-ink-ball"
      />
    </div>
    <div
      class="alu-anchor-link"
    >
      <a
        class="alu-anchor-link-title"
        href="#components-anchor-demo-basic"
        title="Basic demo"
      >
        Basic demo
      </a>
    </div>
    <div
      class="alu-anchor-link"
    >
      <a
        class="alu-anchor-link-title"
        href="#components-anchor-demo-fixed"
        title="Fixed demo"
      >
        Fixed demo
      </a>
    </div>
    <div
      class="alu-anchor-link"
    >
      <a
        class="alu-anchor-link-title"
        href="#API"
        title="API"
      >
        API
      </a>
      <div
        class="alu-anchor-link"
      >
        <a
          class="alu-anchor-link-title"
          href="#Anchor-Props"
          title="Anchor Props"
        >
          Anchor Props
        </a>
      </div>
      <div
        class="alu-anchor-link"
      >
        <a
          class="alu-anchor-link-title"
          href="#Link-Props"
          title="Link Props"
        >
          Link Props
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/anchor/demo/static.md correctly 1`] = `
<div
  class="alu-anchor-wrapper"
  style="max-height:100vh"
>
  <div
    class="alu-anchor fixed"
  >
    <div
      class="alu-anchor-ink"
    >
      <span
        class="alu-anchor-ink-ball"
      />
    </div>
    <div
      class="alu-anchor-link"
    >
      <a
        class="alu-anchor-link-title"
        href="#components-anchor-demo-basic"
        title="Basic demo"
      >
        Basic demo
      </a>
    </div>
    <div
      class="alu-anchor-link"
    >
      <a
        class="alu-anchor-link-title"
        href="#components-anchor-demo-fixed"
        title="Fixed demo"
      >
        Fixed demo
      </a>
    </div>
    <div
      class="alu-anchor-link"
    >
      <a
        class="alu-anchor-link-title"
        href="#API"
        title="API"
      >
        API
      </a>
      <div
        class="alu-anchor-link"
      >
        <a
          class="alu-anchor-link-title"
          href="#Anchor-Props"
          title="Anchor Props"
        >
          Anchor Props
        </a>
      </div>
      <div
        class="alu-anchor-link"
      >
        <a
          class="alu-anchor-link-title"
          href="#Link-Props"
          title="Link Props"
        >
          Link Props
        </a>
      </div>
    </div>
  </div>
</div>
`;
